#4 Fixed layout issues in 'join chat' and 'chat room' components

--- a/ui/chit-chat/src/app/chat-room.css
+++ b/ui/chit-chat/src/app/chat-room.css
@@ -8,6 +8,11 @@
     margin-bottom: 10px;
 }
 
+.chat-room__input-elements {
+    margin-top: 6px;
+    margin-right: 6px;
+}
+
 p {
     word-break: break-all;
     white-space: normal;
