--- a/ui/chit-chat/src/app/join-chat.css
+++ b/ui/chit-chat/src/app/join-chat.css
@@ -7,3 +7,7 @@
     margin-left: 15px;
     margin-bottom: 10px;
 }
+
+.join-chat__input-text {
+    margin-top: 6px;
+}
